grammars/block/test/corpus/basic-markdown.txt
==================
Simple paragraph
==================

This is a paragraph.

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
ATX heading
==================

# Heading 1

---

(document
  (atx_heading
    marker: (atx_heading_marker)
    content: (inline)))

==================
Paragraph with code span
==================

This has `inline code` in it.

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Regular fenced code block
==================

```python
print("hello")
```

---

(document
  (fenced_code_block
    open: (code_fence_delimiter)
    info: (info_string)
    (code_line)
    close: (code_fence_delimiter)))

==================
Fenced code block with single class attribute
==================

```{.bash}
echo "hello"
```

---

(document
  (fenced_code_block
    open: (code_fence_delimiter)
    attributes: (attribute_list
      class: (attribute_class))
    (code_line)
    close: (code_fence_delimiter)))

==================
Fenced code block with multiple attributes
==================

```{.python .numberLines startFrom="10"}
print("hello")
```

---

(document
  (fenced_code_block
    open: (code_fence_delimiter)
    attributes: (attribute_list
      class: (attribute_class)
      class: (attribute_class)
      attribute: (key_value_attribute
        key: (attribute_key)
        value: (attribute_value)))
    (code_line)
    close: (code_fence_delimiter)))

==================
Fenced code block with info string and attributes
==================

```python {.numberLines}
print("hello")
```

---

(document
  (fenced_code_block
    open: (code_fence_delimiter)
    info: (info_string)
    attributes: (attribute_list
      class: (attribute_class))
    (code_line)
    close: (code_fence_delimiter)))

==================
Fenced code block with ID and class attributes
==================

```{#mycode .python}
print("hello")
```

---

(document
  (fenced_code_block
    open: (code_fence_delimiter)
    attributes: (attribute_list
      id: (attribute_id)
      class: (attribute_class))
    (code_line)
    close: (code_fence_delimiter)))

==================
Fenced code block with multiple classes (language second)
==================

```{.numberLines .python}
print("hello")
```

---

(document
  (fenced_code_block
    open: (code_fence_delimiter)
    attributes: (attribute_list
      class: (attribute_class)
      class: (attribute_class))
    (code_line)
    close: (code_fence_delimiter)))

==================
Fenced code block with escaped quotes in attribute value
==================

```{.python filename="test\"file.py"}
print("hello")
```

---

(document
  (fenced_code_block
    open: (code_fence_delimiter)
    attributes: (attribute_list
      class: (attribute_class)
      attribute: (key_value_attribute
        key: (attribute_key)
        value: (attribute_value)))
    (code_line)
    close: (code_fence_delimiter)))

==================
Fenced code block with Unicode in attribute value
==================

```{.python filename="código.py"}
print("hello")
```

---

(document
  (fenced_code_block
    open: (code_fence_delimiter)
    attributes: (attribute_list
      class: (attribute_class)
      attribute: (key_value_attribute
        key: (attribute_key)
        value: (attribute_value)))
    (code_line)
    close: (code_fence_delimiter)))

==================
Fenced code block with complex attributes
==================

```{.bash filename="Terminal" eval=false}
echo "test"
```

---

(document
  (fenced_code_block
    open: (code_fence_delimiter)
    attributes: (attribute_list
      class: (attribute_class)
      attribute: (key_value_attribute
        key: (attribute_key)
        value: (attribute_value))
      attribute: (key_value_attribute
        key: (attribute_key)
        value: (attribute_value)))
    (code_line)
    close: (code_fence_delimiter)))

==================
Fenced code block with YAML content
==================

```yaml
---
key: value
nested:
  - item1
  - item2
---
```

---

(document
  (fenced_code_block
    open: (code_fence_delimiter)
    info: (info_string)
    (code_line)
    (code_line)
    (code_line)
    (code_line)
    (code_line)
    (code_line)
    close: (code_fence_delimiter)))

==================
Fenced code block with triple-brace syntax
==================

```
{{python}}
x = 1
```

---

(document
  (fenced_code_block
    open: (code_fence_delimiter)
    (code_line)
    (code_line)
    close: (code_fence_delimiter)))

==================
Fenced code block with colon and dash patterns
==================

```
config:
  - option1
  - option2
```

---

(document
  (fenced_code_block
    open: (code_fence_delimiter)
    (code_line)
    (code_line)
    (code_line)
    close: (code_fence_delimiter)))

==================
YAML front matter
==================
---
title: "My Document"
---

# Heading

---

(document
  (yaml_front_matter
    start: (yaml_front_matter_start)
    content: (yaml_content
      (yaml_line))
    close: (yaml_front_matter_delimiter))
  (atx_heading
    marker: (atx_heading_marker)
    content: (inline)))
