grammars/block/test/corpus/cross-references.txt
==================
Figure reference
==================

See @fig-plot for details.

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Table reference
==================

Results in @tbl-data show trends.

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Equation reference
==================

Apply @eq-linear to solve.

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Section reference
==================

Details in @sec-intro explain this.

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Listing reference
==================

See @lst-code for implementation.

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Citation vs cross-reference
==================

Smith argues @smith2020 that @fig-results demonstrates this.

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Multiple cross-references
==================

Compare @fig-a with @fig-b and @tbl-summary.

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Cross-reference with hyphens
==================

See @fig-my-plot-2024 for results.

---

(document
  (blank_line)
  (paragraph
    content: (inline)))
