grammars/block/test/corpus/footnotes.txt
==================
Basic inline footnote
==================

Text with ^[inline note] here.

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Nested inline footnotes
==================

^[outer^[inner]]

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Basic footnote reference
==================

Text with reference[^1].

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Multiple footnote references
==================

First[^1] and second[^2] references.

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Footnote definition
==================

[^1]: This is a footnote definition.

---

(document
  (blank_line)
  (footnote_definition
    marker: (footnote_marker)
    content: (inline)))

==================
Footnote definition with inline formatting
==================

[^note]: This has **bold** and *italic* text.

---

(document
  (blank_line)
  (footnote_definition
    marker: (footnote_marker)
    content: (inline)))

==================
Multiple footnotes in paragraph
==================

Text with first[^1] and inline^[note] and second[^2].

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Inline footnote with formatting
==================

^[text **bold**]

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Inline footnote with code span
==================

Text with ^[note with `code span`].

---

(document
  (blank_line)
  (paragraph
    content: (inline)))

==================
Footnote definition with inline code
==================

[^code]: This footnote has `inline code` in it.

---

(document
  (blank_line)
  (footnote_definition
    marker: (footnote_marker)
    content: (inline)))
